--- a/app/MemberModule/templates/Mail.add.latte
+++ b/app/MemberModule/templates/Mail.add.latte
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>
 
 <style type="text/css" n:syntax="off">
-#text { padding-top: 1ex;}
+form { margin-top: 1em;}
 #mail { width: 95%; border-collapse: collapse;}
 #mail .texyla { width: 96%;}
 #mail .max { width: 90%;}
@@ -25,7 +25,6 @@ input.buttonLike:active { background-color: #da251c; color: white; background-im
 <h1 n:block="title">Nová zpráva</h1>
 
 {block #content}
-
 {form mailForm}
 
 <ul class="error" n:if="$form->hasErrors()">
