--- a/www/css/member.css
+++ b/www/css/member.css
@@ -50,6 +50,7 @@ svg.icon { margin: 0 0.4ex; vertical-align: -5%}
 .red {color: red;}
 .blue {color: #0065c6}
 .green {color: green;}
+.orange {color: #d9892d;}
 
 .update {font-size: 0.9em; text-align: right; color: gray;}
 
