User table presenter  - template - TYPO

--- a/app/MemberModule/templates/UserTable.default.latte
+++ b/app/MemberModule/templates/UserTable.default.latte
@@ -54,7 +54,7 @@
 						{* <button n:if="$row->photo" type="button" class="image-popover btn btn-outline-primary btn-sm" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="HA">
 							<svg class="icon icon-image"><use xlink:href="/img/symbols.svg#icon-image"></use></svg>
 						</button> *}
-						<a n:if="$row->photo" target="_blank" href="{$baseUrl}/img/photo/{$row->photo}">
+						<a n:if="$row->photo" target="_blank" href="{$baseUrl}/img/photos/{$row->photo}">
 							<svg class="icon icon-image"><use xlink:href="/img/symbols.svg#icon-image"></use></svg>
 						</a>
                     {default}
