--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -61,6 +61,11 @@
 			</a>
 		</li>
 	{/if}
+	<li n:if="($user->isInRole('admin')) && ($member->photo)">
+		<a class="buttonLike" n:href="photoEdit $member->id">
+            {include svg image} úprava fotky
+		</a>
+	</li>
 	<li n:if="(($user->isInRole('editor')or($member->id == $user->getId()))and(!is_null($member->role)))">
 		<a class="buttonLike" n:href="edit $member->id">
 			{include svg pencil} editovat
